added vanilla js text

--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
 				There are currently 85 units in existence.  Each Swarmatron has been built by hand.
 			</p>
 
-			<p>The following digital implementation is a rough emulation of a Swarmatron coded for the purpose of exploring some of the capabilities the Web Audio API offers.
+			<p>The following digital implementation is a rough emulation of a Swarmatron coded for the purpose of exploring some of the capabilities the Web Audio API offers. It is coded with pure vanilla javscript (using only Modermizr for Web Audio capability detection).
 			</p>
 
 			<div id="swarmatron">
