removed Jquery, fixed resulting webkit bugs for safari6

--- a/index.html
+++ b/index.html
@@ -13,8 +13,7 @@
 		<link href="https://fonts.googleapis.com/css?family=PT+Sans" rel="stylesheet">		
 
 		<link rel="stylesheet" type="text/css" href="css/swarm.css" />
-
-		<script src="https://ajax.googleapis.com/ajax/libs/jquery/3.2.0/jquery.min.js"></script>
+				
 		<script src="js/modernizr-custom.js"></script>
 	</head>
 	<body>
@@ -24,7 +23,7 @@
 				There are currently 85 units in existence.  Each Swarmatron has been built by hand.
 			</p>
 
-			<p>The following digital implementation is a rough emulation of a Swarmatron coded for the purpose of exploring some of the capabilities the Web Audio API offers. It is coded with pure vanilla javscript (using only Modermizr for Web Audio capability detection).
+			<p>The following code example is a rough emulation of a Swarmatron written for the purpose of exploring some of the capabilities the Web Audio API offers. This version uses pure javascript, free of any libraries or frameworks, other than Modernizr for Web Audio capability detection.
 			</p>
 
 			<div id="swarmatron">
