uncommented intro paragraph

--- a/index.html
+++ b/index.html
@@ -19,12 +19,12 @@
 	<body>
 		<header>An HTML5 Swarmatron-like Sound Synthesis Unit</header>
 		<main>
-			<!-- <p>The Swarmatron is an electronic music instrument designed by Brian Dewan and Leon Dewan of Dewanatron.
+			<p>The Swarmatron is an electronic music instrument designed by Brian Dewan and Leon Dewan of Dewanatron.
 				There are currently 85 units in existence.  Each Swarmatron has been built by hand.
 			</p>
 
 			<p>The following code example is a rough emulation of a Swarmatron written for the purpose of exploring some of the capabilities the Web Audio API offers. This version uses pure javascript, free of any libraries or frameworks, other than Modernizr for Web Audio capability detection.
-			</p> -->
+			</p>
 
 			<div id="swarmatron">
 				<div id="mainpanel" class="group">
