refactored to es2015+

--- a/index.html
+++ b/index.html
@@ -1,10 +1,10 @@
 <!doctype html>
 <html>
 	<head>
-		<title>HTML5 Swarmatron-Like Synthesizer</title>
+		<title>Swarmatron-Like Synthesizer</title>
 
 		<meta charset="UTF-8">
-		<meta name="description" content="Swarmatron-like HTML5 Synth by Leon Dewan">
+		<meta name="description" content="Swarmatron-like Synth by Leon Dewan">
 		<meta name="keywords" content="leon brian dewan swarmatron html5 synthesizer">
 		<meta name="author" content="Leon Dewan">
 		<meta name="viewport" content="width=device-width, initial-scale=1.0">
